Forgot to push Save

--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
+<!DOCTYPE html>
 <head>
 
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato:100,300italic,400,700,900' rel='stylesheet' type='text/css'>
 
- 
-
-
-  <title>Bruce Young - Personal Portfolio</title>
+  <title>Alara Chaudhery - Personal Portfolio</title>
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -29,7 +27,9 @@
       <div class="collapse navbar-collapse" id="navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#about">About</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#education"></a>Education</li>
+          <li><a href="#skills"></a>Skills</li>
           <li><a href="#contact">Contact</a></li>
         </ul>
 
@@ -45,18 +45,16 @@
       <div class="row me animated fadeIn">
         <div class="col-xs-offset-5 col-sm-offset-6 col-xs-7 col-sm-6">
           <div class="tagline1">the portfolio of</div>
-          <div class="tagline2 animated fadeIn">BRUCE</div>
-          <div class="tagline2 animated fadeIn">YOUNG</div>
+          <div class="tagline2 animated fadeIn">ALARA</div>
+          <div class="tagline2 animated fadeIn">CHAUDHERY</div>
           <div class="animated fadeIn">
-            <div class="tagline3a">{</div>
-            <div class="tagline3b">designer :
-              <br> coder :
-              <br> biologist :
-              <br> astronomer :
-              <br> educator :
-              <br>
+            <div class="tagline3b">Communications Assitant
+              <br> Copywriter
+              <br> SEO Marketer
+              <br> Graphic Designer
+              <br> Public Speaker
+              <br> Critical Thinker
             </div>
-            <div class="tagline3c">}</div>
           </div>
         </div>
       </div>
@@ -86,21 +84,21 @@
       <div class="col-sm-4 text-center">
         <div class="desc">
           <div class="icon-me"><i class="fa fa-user"></i></div>
-          <p>A full stack developer with an eye for design, UX and UI development and a strong desire to learn and create. I have had a long career in the areas of educational software, multimedia production and web development.</p>
+          <p>I am a recent graduate with a first in Sociology. I have a passion for Public Relations and have managed to secure work experience at some of the largest agencies in London which solidified my passion to pursue a career in PR and Communications</p>
         </div>
       </div>
 
       <div class="col-sm-4 text-center">
         <div class="desc">
           <div class="icon-me"><i class="fa fa-mortar-board"></i></div>
-          <p>I firmly believe in life long learning and I'm constantly exploring new ideas and technologies. MOOC's have enabled me to update my skills and keep abreast of the latest trends in design and coding.</p>
+          <p>I firmly believe in life long learning and I am constantly exploring new ideas, strategies and technologies. Industry opportunities have enabled me to constantly iterate on my skills and keep abreast of the latest trends in marketing and communications.</p>
         </div>
       </div>
 
       <div class="col-sm-4 text-center">
         <div class="desc">
           <div class="icon-me"><i class="fa fa-rocket"></i></div>
-          <p>My interests are wide with formal qualifications in Biology, Astronomy and Education. I have designed and/or written software for a large international diagnosics company, schools and universities.</p>
+          <p>With experience in corporate communications, public relations and marketing communications, I am also an active member of the DEI Council and Charity Council at my current workplace.</p>
         </div>
       </div>
 
@@ -111,13 +109,13 @@
 
 
   <!-- portfolio projects page -->
-  <section id="portfolio" class="container-fluid">
+  <section id="experience" class="container-fluid">
 
     <div class="row section-banner">
       <div class="col-md-offset-3 col-md-6 text-center">
         <div>
           <span class="line portfolio"></span>
-          <span class="section-title portfolio">portfolio</span>
+          <span class="section-title portfolio">Experience</span>
           <span class="line portfolio"></span>
         </div>
       </div>
@@ -127,7 +125,7 @@
     <div class="row max">
       <div class="col-sm-offset-2 col-sm-8 text-center">
         <div class="desc">
-          <p>These items are mainly exercises done whilst undertaking a full stack development course with Free Code Camp. The details are on the back of the cards with links to my CodePen and live sites.</p>
+          <p>The following items describe my related work experience, which show my dedication to my passion for working in the Communication, Media and PR field.</p>
         </div>
       </div>
     </div>
