--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
+<html lang="en" >
 <head>
-
+  <meta charset="UTF-8">
+  <title>Alara Chaudhery - Personal Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato:100,300italic,400,700,900' rel='stylesheet' type='text/css'>
 
-  <title>Alara Chaudhery - Personal Portfolio</title>
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
