--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>Alara Chaudhery - Personal Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
   <link rel="stylesheet" href="style.css">
+
+  <script src="https://kit.fontawesome.com/7a2677812a.js" crossorigin="anonymous"></script>
+
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato:100,300italic,400,700,900' rel='stylesheet' type='text/css'>
